fix header causing overflow
over padding  is crazy

--- a/assets/css/misc.css
+++ b/assets/css/misc.css
@@ -874,3 +874,8 @@ font-weight: normal;
     height: 20px !important;
     vertical-align: middle;
   }
+
+  html {
+    overflow-x: hidden !important;
+    /* i hate css raaaah */
+  }
